--- a/rand_img/index.html
+++ b/rand_img/index.html
@@ -7,14 +7,14 @@
     <title>Hi frandzz, look at these random images</title>
   </head>
   <body>
-    <h1>hi frands</h1>
+    <h1>Random cat images</h1>
     <img
       class="main_img"
       src=""
       height="300"
     />
     <br />
-    <button>Next Photo</button>
+    <button id="next_btn">Next Photo</button>
     <script src="script.js"></script>
   </body>
 </html>
